Channel partner to distributors

--- a/src/pages/dealer-dealer-list/dealer-dealer-list.html
+++ b/src/pages/dealer-dealer-list/dealer-dealer-list.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar>
-        <ion-title>My {{user_data.type != 1 ? 'Channel Partner' : 'Dealer'}}s</ion-title>        
+        <ion-title>My {{user_data.type != 1 ? 'Distributor' : 'Dealer'}}s</ion-title>        
     </ion-navbar>    
     <ion-toolbar>
         <div class="search add-search">
