--- a/src/pages/Contractor-Meet/contractor-meet-add/contractor-meet-add.html
+++ b/src/pages/Contractor-Meet/contractor-meet-add/contractor-meet-add.html
@@ -10,14 +10,14 @@
                 <ion-item  [ngClass]="{'error':f.submitted && dr_type?.invalid}">
                     <ion-label floating>Select Type <span>*</span></ion-label>
                     <ion-select name="select_type" name="dr_type" #dr_type="ngModel" [(ngModel)]="data.dr_type" (ngModelChange)="get_network_list(data.dr_type)" required>
-                        <ion-option value="1">Channel Partner</ion-option>
+                        <ion-option value="1"></ion-option>
                         <ion-option value="7">DIRECT DEALER</ion-option>
                         <ion-option value="3">RETAILER</ion-option>
                     </ion-select>
                 </ion-item>
                 <!-- [ngClass]="{'error':f.submitted && dealer_id?.invalid}" -->
                 <ion-item   *ngIf="drList.length > 0">
-                    <ion-label floating *ngIf="data.dr_type == '1'">Channel Partner</ion-label>
+                    <ion-label floating *ngIf="data.dr_type == '1'">Distributor</ion-label>
                     <ion-label floating *ngIf="data.dr_type == '3'">Retailer</ion-label>
                     <ion-label floating *ngIf="data.dr_type == '7'">Direct Dealer</ion-label>
                     <ionic-selectable
