--- a/src/pages/select-registration-type/select-registration-type.html
+++ b/src/pages/select-registration-type/select-registration-type.html
@@ -16,7 +16,7 @@
 				Select Login Type
 			</div>
 			<ion-item >
-				<ion-label>Channel Partner/Dealer</ion-label>
+				<ion-label>Distributor/Dealer</ion-label>
 				<ion-radio color="secondary" value="DrLogin"></ion-radio>
 			</ion-item>
 			<ion-item>
